# pdnotion

./: .gitignore  README.md  pyproject.toml
src/pdnotion/: __init__.py  pdnotion.py  query_children.py  query_properties.py
test/: md2notion.ipynb  pdnotion.ipynb  pdnotion_reation.ipynb
