[build-system]
requires = ["setuptools"]

[project]
name = "pdnotion"
version = "0.0.1"
authors = [
  { name="En Aiya", email="author@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "notion_client",
    "pandas",
    "functools",
]

[project.urls]
"Homepage" = "https://github.com/EnAiya/pdnotion"
"Bug Tracker" = "https://github.com/EnAiya/pdnotion/issues"
